# agent-harness-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.agents/skills/rust-review/: SKILL.md
crates/harness-app-server/: Cargo.toml
crates/harness-app-server/src/: lib.rs  protocol.rs  server.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: compaction.rs  compaction_config.rs  config.rs  context.rs  error.rs  guardian.rs  guardian_config.rs  lib.rs  loop_engine.rs  memory.rs  message.rs  policy.rs  provider.rs  tool_orchestrator.rs  types.rs
crates/harness-core/tests/: compaction_integration.rs  guardian_integration.rs  memory_integration.rs  skills_integration.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  tool_adapter.rs  transport.rs
crates/harness-memory/: Cargo.toml
crates/harness-memory/src/: config.rs  entry.rs  error.rs  lib.rs  pipeline.rs  store.rs
crates/harness-models/: Cargo.toml
crates/harness-models/src/: deepseek.rs  error.rs  lib.rs  mock.rs  provider.rs
crates/harness-multi/: Cargo.toml
crates/harness-multi/src/: lib.rs  orchestrator.rs  runner.rs
crates/harness-sandbox/: Cargo.toml
crates/harness-sandbox/src/: config.rs  error.rs  exec_manager.rs  k8s.rs  lib.rs  policy.rs  process.rs  pty.rs  scheduler.rs  traits.rs  wasm.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: error.rs  lib.rs  registry.rs  schema.rs  tool.rs
crates/harness-tools/src/skills/: config.rs  loader.rs  mod.rs  registry.rs  tool.rs
crates/harness-tools/tests/: skills_integration.rs
crates/harness-trace/: Cargo.toml
crates/harness-trace/src/: event.rs  lib.rs  persist.rs  tracer.rs
deploy/helm/agent-harness/: Chart.yaml  values.yaml
deploy/helm/agent-harness/templates/: deployment.yaml  rbac.yaml
deploy/k8s/: README.md  namespace.yaml  runtimeclass-gvisor.yaml  runtimeclass-kata-firecracker.yaml  runtimeclass-kata.yaml  sandbox-job-example.yaml
docs/: architecture.md  codex-inspired.md  k8s-deployment.md  sandbox.md
examples/app-server/: Cargo.toml
examples/app-server/src/: main.rs
examples/coding-agent/: Cargo.toml
examples/coding-agent/src/: main.rs
examples/sandbox-demo/: Cargo.toml
examples/sandbox-demo/src/: main.rs
