[package]
name = "harness-app-server"
description = "JSON-RPC App Server for Agent Harness (Codex App Server inspired)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
uuid.workspace = true

harness-core = { workspace = true }
harness-tools = { workspace = true }
harness-trace = { workspace = true }

[dev-dependencies]
harness-models = { workspace = true }
