[package]
name = "harness-core"
description = "Agent Loop engine: ReAct, Context Engineering"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

harness-tools = { workspace = true }
harness-trace = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
