[package]
name = "harness-models"
description = "LLM provider adapters (DeepSeek, mock)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

harness-core = { workspace = true }
harness-tools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
