[package]
name = "harness-multi"
description = "Subagent delegation and Multi-Agent orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

harness-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
