[package]
name = "harness-trace"
description = "Agent execution trace recording and replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
