[package]
name = "app-server"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "app-server"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
harness-app-server = { path = "../../crates/harness-app-server" }
harness-core.workspace = true
harness-models.workspace = true
harness-tools.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
