[package]
name = "coding-agent"
description = "Example coding agent using agent-harness-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coding-agent"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

harness-core = { workspace = true }
harness-models = { workspace = true }
harness-mcp = { workspace = true }
harness-tools = { workspace = true }
harness-trace = { workspace = true }
